--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yt-downloader-electron",
-  "version": "1.0.0",
-  "description": "Electron yt-dlp downloader that opens browser UI",
+  "name": "Local-Video-Downloader",
+  "version": "2.0.0",
+  "description": "Video downloader local",
   "author": "sishanhewa",
   "main": "main.js",
   "scripts": {
