--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,15 +3,21 @@ name: Build and Release
 on:
   push:
     tags:
-      - "v*.*.*"   # runs only when you push a version tag
+      - "v*.*.*"   # runs only when you push a version tag like v2.0.1
+
+permissions:
+  contents: write   # needed to upload release assets
 
 jobs:
   build-mac:
-    name: macOS (Intel + ARM)
+    name: macOS (ARM + Intel)
     runs-on: macos-latest
 
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # ✅ electron-builder needs this name
+
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Setup Node
@@ -19,29 +25,25 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm install
 
-      - name: Build mac ARM64
+      - name: Build mac ARM64 dmg
         run: npm run dist:mac:arm
 
-      - name: Build mac x64 (Intel)
+      - name: Build mac Intel dmg
         run: npm run dist:mac:intel
 
-      - name: Upload mac artifacts to Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            dist/*.dmg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-win:
-    name: Windows EXE
+    name: Windows (NSIS EXE)
     runs-on: windows-latest
 
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # ✅ electron-builder needs this name
+
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Setup Node
@@ -49,16 +51,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm install
 
-      - name: Build Windows NSIS
+      - name: Build Windows EXE
         run: npm run dist:win
-
-      - name: Upload Windows artifacts to Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            dist/*.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
